[gd_scene load_steps=3 format=3 uid="uid://x1lwev7chtcc"]

[ext_resource type="Script" path="res://main.gd" id="1_qmj53"]
[ext_resource type="PackedScene" uid="uid://d3w0n2usetb3q" path="res://start_menu.tscn" id="2_t2gf7"]

[node name="Main" type="Node"]
script = ExtResource("1_qmj53")

[node name="Level" type="Node" parent="."]
unique_name_in_owner = true

[node name="LevelSpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("res://levels/level.tscn")
spawn_path = NodePath("../Level")
spawn_limit = 1

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="StartMenu" parent="CanvasLayer" instance=ExtResource("2_t2gf7")]
unique_name_in_owner = true

[node name="DisconnectTimer" type="Timer" parent="."]
wait_time = 6.0
one_shot = true

[connection signal="timeout" from="DisconnectTimer" to="." method="disconnect_multiplayer"]
